Disable showing unnecessary HTML-items when the page is loaded

--- a/static/changepassword.css
+++ b/static/changepassword.css
@@ -1,4 +1,10 @@
 /* ===============================================================
+   Hide several elements to prevent blinking when loading the page
+   =============================================================== */
+#spinner-div {
+	display: none;
+}
+/* ===============================================================
    Styles of change password page
    =============================================================== */
 main {
