Fixed VS.Code warnings

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -125,7 +125,7 @@
 				<option value="remind">{{.Labels.iconRemind}}</option>
 				<option value="call">{{.Labels.iconCall}}</option>
 				<option value="force">{{.Labels.iconForce}}</option>
-				<option value="mail">{{.Labels.iconMail}}</toption>
+				<option value="mail">{{.Labels.iconMail}}</option>
 				<option value="prepare">{{.Labels.iconPrepare}}</option>
 				<option value="manage">{{.Labels.iconManage}}</option>
 				<option value="meet">{{.Labels.iconMeet}}</option>
