--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -16,7 +16,7 @@
 		var textResult = "{{.Result}}";
 		var uuid = "{{.UUID}}";
 		{{- range $key, $value := .Labels}}
-		{{- if or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") }}
+		{{- if or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") }}
 		var {{$key}} = "{{$value}}";
 		{{- end}}
 		{{- end}}
