--- a/static/tasks.css
+++ b/static/tasks.css
@@ -169,27 +169,27 @@ section {
   padding: 2px;
   text-align: justify-all;
 }
-section.td {
+#td {
 	background-color:rgba(251,180,174, 0.5);
   flex-grow: 1;
 }
-section.iu {
+#iu {
 	background-color:rgba(254,217,166, 0.5);
   flex-grow: 1;
 }
-section.in {
+#in {
 	background-color:rgba(255,255,204, 0.5);
   flex-grow: 1;
 }
-section.nu {
+#nu {
 	background-color:rgba(204,235,197, 0.5);
   flex-grow: 1;
 }
-section.nn {
+#nn {
 	background-color:rgba(179,205,227, 0.5);
   flex-grow: 1;
 }
-section.ib {
+#ib {
 	background-color:rgba(222,203,228, 0.5);
   flex-grow: 1;
 }
