Add task display modes

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -94,6 +94,10 @@
 			<label id="done-tasks-count-label"></label>
 			<label>{{.Labels.labelStatisticCanceled}}</label>
 			<label id="canceled-tasks-count-label"></label>
+			<label>{{.Labels.labelStatisticWaitRemind}}</label>
+			<label id="wait-remind-tasks-count-label"></label>
+			<label>{{.Labels.labelStatisticActivity}}</label>
+			<label id="activity-tasks-count-label"></label>
 			<button id="new-list-create-button">{{.Labels.buttonNewListCreate}}</button>
 		</form>
 	</nav>
