--- a/static/tasks.css
+++ b/static/tasks.css
@@ -136,12 +136,15 @@ nav {
 #edit-task-form {
   flex-grow: 100;
 }
-select#task-lists-select option:nth-child(1) {
+#task-lists-select option:nth-child(1) {
   font-weight:bold;
 }
-input#checkbox-today-input {
+#checkbox-today-input {
   margin-right: 0;
   vertical-align: middle;
+}
+#filter-clear-button {
+    margin-left: -7px;
 }
 
 
@@ -225,12 +228,12 @@ p {
 	-webkit-text-decoration-color: rgba(255,0,0,0.3);
 	color: rgba(0,0,0,0.3);
 }
-span.name {
+span.employee {
 	color: rgba(0,0,255,1.0);
 }
-p.done span.name, 
-p.canceled span.name, 
-p.moved span.name {
+p.done span.employee, 
+p.canceled span.employee, 
+p.moved span.employee {
 	color: rgba(0,0,255,0.3);
 }
 p:hover {
