Developed creating and editing tasks

--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -16,7 +16,7 @@
 		var textResult = "{{.Result}}";
 		var uuid = "{{.UUID}}";
 		{{- range $key, $value := .Labels}}
-		{{- if or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") }}
+		{{- if or (or (or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") ) (eq (printf "%.5s" $key) "alert") ) (eq (printf "%.6s" $key) "button") }}
 		var {{$key}} = "{{$value}}";
 		{{- end}}
 		{{- end}}
@@ -25,7 +25,7 @@
 <body>
 	<main>
 		<form>
-			<h1>{{.Labels.titleChangePassword}}:</h2>
+			<h1>{{.Labels.titleChangePassword}}:</h1>
 			<div id="password1-div"><input type="password" name="password1" id="password1-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}"></div>
 			<div id="password2-div"><input type="password" name="password2" id="password2-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}"></div>
 			<div id="submit-div"><button id="submit-button">{{.Labels.buttonSubmitPassword}}</button></div>
