--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -18,7 +18,7 @@
 	<script src="/static/tasks.js?5"></script>
 	<script type="text/javascript">
 		{{- range $key, $value := .Labels}}
-		{{- if or (or (or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") ) (eq (printf "%.5s" $key) "alert") ) (eq (printf "%.6s" $key) "button") }}
+		{{- if or (or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") ) (eq (printf "%.6s" $key) "button") }}
 		var {{$key}} = "{{$value}}";
 		{{- end}}
 		{{- end}}
