--- a/static/tasks.css
+++ b/static/tasks.css
@@ -176,6 +176,7 @@ section {
 #td {
 	background-color:rgba(251,180,174, 0.5);
   flex-grow: 1;
+  min-width: 17%;
 }
 #iu {
 	background-color:rgba(254,217,166, 0.5);
@@ -238,7 +239,7 @@ span.employee {
 	color: rgba(0,0,255,0.3);
 }
 p:hover,
-li:hover {
+div.today-task:hover {
 	cursor: pointer;
 }
 .done:hover::after, 
@@ -262,26 +263,80 @@ li:hover {
   padding: 0; 
 }
 li { 
-  margin: 0 5px 5px 5px; 
-  padding: 5px; 
+  margin: 1px; 
+  padding: 2px; 
   border: dotted rgba(0,0,0,1) 1px;
-  border-radius: 5px;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+li img {
+	display: inline-block;
+  flex-grow: 1;
+	height: 16px;
+}
+img.icon {
+  padding: 0 0 0 2px;
+  margin: -1px 2px 0 0;
+}
+img.handle {
+  height: 16px;
+  margin-left: -3px;
+}
+img.insert-delimiter {
+  height: 12px;
+  margin-left: 3px;
+}
+img.delete-delimiter {
+  height: 10px;
+  margin-left: 3px;
+}
+img.handle:hover {
+  cursor: move;
+}
+img.insert-delimiter:hover,
+img.delete-delimiter:hover {
+  cursor: pointer;
+}
+div.today-task {
+  flex-grow: 100;
+}
+li.delimiter {
+  height: 14px;
+  background-image: linear-gradient(135deg, rgba(204,204,204,0.3) 25%, rgba(176,176,176,0.3) 25%, rgba(176,176,176,0.3) 50%, rgba(204,204,204,0.3) 50%, rgba(204,204,204,0.3) 75%, rgba(176,176,176,0.3) 75%, rgba(176,176,176,0.3) 100%),
+                    linear-gradient(45deg, rgba(204,204,204,0.3) 25%, rgba(176,176,176,0.3) 25%, rgba(176,176,176,0.3) 50%, rgba(204,204,204,0.3) 50%, rgba(204,204,204,0.3) 75%, rgba(176,176,176,0.3) 75%, rgba(176,176,176,0.3) 100%);
+  /*background-size: 8.49px 8.49px;*/
+  background-size: 6px 6px;
+
+                    /**/
+	/*background: linear-gradient( rgba(187,187,187,0.3), transparent 1px), linear-gradient( 90deg, rgba(187,187,187,0.3), transparent 1px);
+	background-size: 4px 4px;
+	background-position: center center;*/
+  border: none;
+}
+div.delimeter {
+  flex-grow: 100;
 }
 
 /* ===============================================================
    Styles of icons
    =============================================================== */
-p img,
-li img {
+p img {
 	display: inline-block;
 	vertical-align: text-top;
 	height: 16px;
   margin: -1px 2px 0 0;
   padding: 0 0 0 2px;
 }
-.done img, 
-.canceled img, 
-.moved img {
+.done img,
+img.done, 
+.canceled img,
+img .canceled,
+.moved img,
+img.moved {
 	opacity: 0.3;
 }
 
