Finish user interface of today's tasks

--- a/static/tasks.css
+++ b/static/tasks.css
@@ -317,7 +317,7 @@ li.delimiter {
 	background-position: center center;*/
   border: none;
 }
-div.delimeter {
+div.delimiter {
   flex-grow: 100;
 }
 
