--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -16,7 +16,7 @@
 		var textResult = "{{.Result}}";
 		var uuid = "{{.UUID}}";
 		{{- range $key, $value := .Labels}}
-		{{- if or (or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") ) (eq (printf "%.6s" $key) "button") }}
+		{{- if or (or (or ( or (eq (printf "%.4s" $key) "ajax") (eq (printf "%.6s" $key) "result") ) (eq (printf "%.6s" $key) "status") ) (eq (printf "%.6s" $key) "button") ) (eq (printf "%.4s" $key) "hint") }}
 		var {{$key}} = "{{$value}}";
 		{{- end}}
 		{{- end}}
