Some bugs fixed

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -189,7 +189,7 @@
 		</section>
 	</main>
 	<footer>
-		<a href="https://github.com/st-korn/KornToDoList">{{.Labels.labelDeveloperPortal}}</a>
+		<a href="https://github.com/st-korn/KornToDoList" target="_blank">{{.Labels.labelDeveloperPortal}}</a>
 	</footer>
 </body>
 </html>
