Improve timestamps functionality, add periodically checks for updates

--- a/static/tasks.css
+++ b/static/tasks.css
@@ -12,6 +12,8 @@ header,
 #signup-spinner-div,
 #login-spinner-div,
 #task-spinner-div
+#new-list-create-button,
+#task-move-button
 {
   display: none;
 }
