--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -120,6 +120,7 @@
 			<label>{{.Labels.labelTask}}</label>
 			<input type="hidden" id="task-id-input" name="id">
 			<input type="hidden" id="task-timestamp-input" name="timestamp">
+			<input type="hidden" id="task-checksum-input" name="timestamp">
 			<input type="text" id="task-text-input" name="text" size="55">
 			<select title="{{.Labels.hintTaskSectionSelector}}" name="section" id="task-section-select">
 			 	<option value="iu">{{.Labels.sectionIU}}</option>
