Split javascript to several files

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -15,6 +15,10 @@
 	<script src="/static/libs/js.cookie.js"></script>
 	<script src="/static/libs/md5.min.js"></script>
 	<script src="/static/global.js?3"></script>
+	<script src="/static/headers.js?1"></script>
+	<script src="/static/lists.js?1"></script>
+	<script src="/static/filter.js?1"></script>
+	<script src="/static/today.js?1"></script>
 	<script src="/static/tasks.js?5"></script>
 	<script type="text/javascript">
 		{{- range $key, $value := .Labels}}
