--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -107,6 +107,7 @@
 			<label>{{.Labels.labelStatisticActivity}}</label>
 			<label id="activity-tasks-count-label"></label>
 			<button id="new-list-create-button">{{.Labels.buttonNewListCreate}}</button>
+			<button id="empty-list-remove-button">{{.Labels.buttonEmptyListRemove}}</button>
 		</form>
 	</nav>
 	<nav id="task-filter-nav">
