Resolve #67: add language selector to ChangePassword form

--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" type="text/css" href="/static/global.css?1">
-	<link rel="stylesheet" type="text/css" href="/static/changepassword.css?3">
+	<link rel="stylesheet" type="text/css" href="/static/changepassword.css?4">
 	<link rel="icon" type="image/png" href="/static/favicon.png">
 	<link rel="apple-touch-icon" type="image/png" href="/static/faviphone.png">
 	<script src="/static/libs/jquery-3.3.1.min.js"></script>
+	<script src="/static/libs/js.cookie.js"></script>
 	<script src="/static/libs/md5.min.js"></script>
 	<script src="/static/global.js?1"></script>
 	<script src="/static/changepassword.js?2"></script>
@@ -39,6 +40,14 @@
 				<label class="result" id="result-label">{{.Result}}</label>
 			</div>
 			<div id="return-div"><button id="return-button">{{.Labels.buttonReturn}}</button></div>
+		</form>
+		<form id="languages-and-help-form">
+			<label>{{.Labels.labelLanguages}}</label>
+			<select title="{{.Labels.hintLanguagesSelector}}" name="lang" id="language-select">
+				{{- range .Langs}}
+			 	<option value="{{.EnglishName}}"{{if eq .EnglishName $.UserLang}} selected="selected"{{end}}>{{.NationalName}}</option>
+				{{- end}}
+			</select>
 		</form>
 	</main>
 </body>
