--- a/static/changepassword.css
+++ b/static/changepassword.css
@@ -16,6 +16,7 @@ form {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  margin-bottom: 40px;
 }
 div {
   margin: 5px 0 5px 0;
