Fix language selector on ChangePassword form

--- a/static/changepassword.css
+++ b/static/changepassword.css
@@ -8,15 +8,35 @@
    Styles of change password page
    =============================================================== */
 main {
+  display: flex;
   margin: 0 auto 0 auto;
   max-width: 800px;
 }
-form {
+@media (max-width: 899px) { 
+  main {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+  }
+}
+@media (min-width: 900px) { 
+  main {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+  }
+}
+#change-password-form {
+  flex-grow: 100;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 40px;
+}
+#languages-and-help-form {
+  flex-grow: 1;
+  margin-top: 5px;
+  text-align: center;
 }
 div {
   margin: 5px 0 5px 0;
