--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -11,7 +11,7 @@
 	<script src="/static/libs/jquery-3.3.1.min.js"></script>
 	<script src="/static/libs/js.cookie.js"></script>
 	<script src="/static/libs/md5.min.js"></script>
-	<script src="/static/global.js?1"></script>
+	<script src="/static/global.js?2"></script>
 	<script src="/static/changepassword.js?2"></script>
 	<script type="text/javascript">
 		var textResult = "{{.Result}}";
@@ -25,8 +25,8 @@
 </head>
 <body>
 	<main>
-		<form>
-			<h1>{{.Labels.titleChangePassword}}:</h1>
+		<form id="change-password-form">
+			<h1>{{.Labels.titleChangePassword}}</h1>
 			<div id="password1-div"><input type="password" name="password1" id="password1-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}"></div>
 			<div id="password2-div"><input type="password" name="password2" id="password2-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}"></div>
 			<div id="submit-div"><button id="submit-button">{{.Labels.buttonSubmitPassword}}</button></div>
@@ -41,6 +41,7 @@
 			</div>
 			<div id="return-div"><button id="return-button">{{.Labels.buttonReturn}}</button></div>
 		</form>
+		<div></div>
 		<form id="languages-and-help-form">
 			<label>{{.Labels.labelLanguages}}</label>
 			<select title="{{.Labels.hintLanguagesSelector}}" name="lang" id="language-select">
