Made html valid

--- a/static/changepassword.css
+++ b/static/changepassword.css
@@ -4,23 +4,24 @@
 #spinner-div {
 	display: none;
 }
+
 /* ===============================================================
    Styles of change password page
    =============================================================== */
-main {
-  display: flex;
+body {
   margin: 0 auto 0 auto;
   max-width: 800px;
+  display: flex;
 }
 @media (max-width: 899px) { 
-  main {
+  body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
   }
 }
 @media (min-width: 900px) { 
-  main {
+  body {
     flex-direction: row;
     justify-content: flex-start;
     align-items: stretch;
