--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{.UserLangTag}}">
 <head>
 	<title>{{.Labels.titleChangePassword}}</title>
 	<meta charset="utf-8">
@@ -13,7 +13,7 @@
 	<script src="/static/libs/md5.min.js"></script>
 	<script src="/static/global.js?2"></script>
 	<script src="/static/changepassword.js?2"></script>
-	<script type="text/javascript">
+	<script>
 		var textResult = "{{.Result}}";
 		var uuid = "{{.UUID}}";
 		{{- range $key, $value := .Labels}}
@@ -24,32 +24,30 @@
 	</script>
 </head>
 <body>
-	<main>
-		<form id="change-password-form">
-			<h1>{{.Labels.titleChangePassword}}</h1>
-			<div id="password1-div"><input type="password" name="password1" id="password1-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}"></div>
-			<div id="password2-div"><input type="password" name="password2" id="password2-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}"></div>
-			<div id="submit-div"><button id="submit-button">{{.Labels.buttonSubmitPassword}}</button></div>
-			<div id="result-div">
-				<div class="sk-fading-circle" id="spinner-div">
-					<div class="sk-circle1 sk-circle"></div><div class="sk-circle2 sk-circle"></div><div class="sk-circle3 sk-circle"></div>
-					<div class="sk-circle4 sk-circle"></div><div class="sk-circle5 sk-circle"></div><div class="sk-circle6 sk-circle"></div>
-					<div class="sk-circle7 sk-circle"></div><div class="sk-circle8 sk-circle"></div><div class="sk-circle9 sk-circle"></div>
-					<div class="sk-circle10 sk-circle"></div><div class="sk-circle11 sk-circle"></div><div class="sk-circle12 sk-circle"></div>
-				</div>
-				<label class="result" id="result-label">{{.Result}}</label>
+	<form id="change-password-form">
+		<h1>{{.Labels.titleChangePassword}}</h1>
+		<div id="password1-div"><input type="password" name="password1" id="password1-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}"></div>
+		<div id="password2-div"><input type="password" name="password2" id="password2-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}"></div>
+		<div id="submit-div"><button id="submit-button">{{.Labels.buttonSubmitPassword}}</button></div>
+		<div id="result-div">
+			<div class="sk-fading-circle" id="spinner-div">
+				<div class="sk-circle1 sk-circle"></div><div class="sk-circle2 sk-circle"></div><div class="sk-circle3 sk-circle"></div>
+				<div class="sk-circle4 sk-circle"></div><div class="sk-circle5 sk-circle"></div><div class="sk-circle6 sk-circle"></div>
+				<div class="sk-circle7 sk-circle"></div><div class="sk-circle8 sk-circle"></div><div class="sk-circle9 sk-circle"></div>
+				<div class="sk-circle10 sk-circle"></div><div class="sk-circle11 sk-circle"></div><div class="sk-circle12 sk-circle"></div>
 			</div>
-			<div id="return-div"><button id="return-button">{{.Labels.buttonReturn}}</button></div>
-		</form>
-		<div></div>
-		<form id="languages-and-help-form">
-			<label>{{.Labels.labelLanguages}}</label>
-			<select title="{{.Labels.hintLanguagesSelector}}" name="lang" id="language-select">
-				{{- range .Langs}}
-			 	<option value="{{.EnglishName}}"{{if eq .EnglishName $.UserLang}} selected="selected"{{end}}>{{.NationalName}}</option>
-				{{- end}}
-			</select>
-		</form>
-	</main>
+			<label class="result" id="result-label">{{.Result}}</label>
+		</div>
+		<div id="return-div"><button id="return-button">{{.Labels.buttonReturn}}</button></div>
+	</form>
+	<div></div>
+	<form id="languages-and-help-form">
+		<label>{{.Labels.labelLanguages}}</label>
+		<select title="{{.Labels.hintLanguagesSelector}}" name="lang" id="language-select">
+			{{- range .Langs}}
+			<option value="{{.EnglishName}}"{{if eq .EnglishName $.UserLang}} selected="selected"{{end}}>{{.NationalName}}</option>
+			{{- end}}
+		</select>
+	</form>
 </body>
 </html>
