Fix statistic bug and add today's tasks count to statistic

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -106,6 +106,8 @@
 			<label id="wait-remind-tasks-count-label"></label>
 			<label>{{.Labels.labelStatisticActivity}}</label>
 			<label id="activity-tasks-count-label"></label>
+			<label>{{.Labels.labelStatisticToday}}</label>
+			<label id="today-tasks-count-label"></label>
 			<button id="new-list-create-button">{{.Labels.buttonNewListCreate}}</button>
 			<button id="empty-list-remove-button">{{.Labels.buttonEmptyListRemove}}</button>
 		</form>
