Fixed #93: Now you can remove any icon from existing task

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" type="text/css" href="/static/global.css?12">
-	<link rel="stylesheet" type="text/css" href="/static/tasks.css?18">
+	<link rel="stylesheet" type="text/css" href="/static/tasks.css?19">
 	<link rel="stylesheet" type="text/css" href="/static/libs/jquery-ui.min.css">
 	<link rel="icon" type="image/png" href="/static/favicon.png">
 	<link rel="apple-touch-icon" type="image/png" href="/static/faviphone.png">
@@ -137,7 +137,7 @@
 			 	<option value="ib">{{.Labels.sectionIB}}</option>
 			</select>
 			<select title="{{.Labels.hintTaskIconSelector}}" name="icon" id="task-icon-select">
-				<option value="" disabled selected>{{.Labels.iconDefault}}</option>
+				<option value="" selected>{{.Labels.iconDefault}}</option>
 				<option value="wait">{{.Labels.iconWait}}</option>
 				<option value="remind">{{.Labels.iconRemind}}</option>
 				<option value="call">{{.Labels.iconCall}}</option>
